# Booking-Rooms

./: README.md
Frontend/src/components/: AuthForm.jsx  GuestRoute.jsx  OccupiedDatesDisplay.css  OccupiedDatesDisplay.jsx
Frontend/src/components/RoomDetails/: RoomCard.jsx  RoomImageSlider.jsx
backend/: .gitignore  db.sqlite3  dockerfile  pyproject.toml  requirements.txt
backend/Frontend/: package-lock.json  package.json
backend/Frontend/src/: main.jsx
backend/Frontend/src/components/: AllRooms.jsx  BookingComponent.jsx  Navbar.jsx  OccupiedDatesDisplay.jsx  ProtectedRoute.jsx  RouteErrorBoundary.jsx  UserContext.jsx
backend/Frontend/src/components/RoomDetails/: OccupiedDates.jsx  RoomDetails.css  Roominfo.jsx
backend/Room_Booking/: admin.py  auth_backend.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/Room_Booking/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
