[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.1",
    "django==6.0.2",
    "django-cors-headers==4.9.0",
    "djangorestframework==3.16.1",
    "pillow>=12.1.1",
    "pygments==2.19.2",
    "sqlparse==0.5.5",
    "tzdata==2025.3",
]
